k8s/manifests/deployment.yaml
# This is a sample deployment manifest file for a simple web application.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-project
  labels:
    app: devops-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devops-project
  template:
    metadata:
      labels:
        app: devops-project
    spec:
      containers:
      - name: devops-project
        image: wafula101/devops-project:v1
        ports:
        - containerPort: 8080
